--- a/environment.yml
+++ b/environment.yml
@@ -6,4 +6,9 @@ dependencies:
   - rdkit
   - pip
   - pip:
-      - -r file:https://github.com/punitjain-jp/project/raw/main/requirements.txt
+      - streamlit==0.71.0
+      - pandas==1.1.3
+      - numpy==1.19.2
+      - Pillow==8.0.1
+      - scikit-learn==0.23.2
+      - pickle5
