--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: my_env
+export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=cpp
 channels:
   - conda-forge
 dependencies:
   - python=3.7.0
+  - 
   - rdkit
   - pip
   - pip:
